# ca

./: .env  Cargo.toml  Dockerfile.backend  README.md  docker-compose.yml
backend/: .env  Cargo.toml
backend/docker/: docker-compose.yml
backend/src/: lib.rs  main.rs  mk_certs.rs
backend/src/config/: app_state.rs  config.rs
backend/src/controller/: admin_controller.rs  certificate.rs  certificate_controller.rs  client_controller.rs  common.rs  mod.rs  signing_request_controller.rs  swagger.rs  user_controller.rs
backend/src/entity/: certificate.rs  client.rs  mod.rs  root_certificate.rs  signing_request.rs  token.rs  user.rs
backend/src/error/: http_response_error.rs
backend/src/middleware/: extractors.rs  jwt_middleware.rs  keycloak_middleware.rs  keycloak_roles.rs  mod.rs
backend/src/model/: ca_certificate_dto.rs  client_dto.rs  create_client_dto.rs  create_user_dto.rs  error_dto.rs  generate_intermediate_dto.rs  mod.rs  user_dto.rs
backend/src/repository/: certificate_repository.rs  client_repository.rs  database.rs  mod.rs  root_certificate_repository.rs  signing_request_repository.rs  token_repository.rs
backend/src/service/: certificate_service.rs  client_service.rs  keycloak_service.rs  mod.rs  root_certificate_service.rs  signing_request_service.rs  token_service.rs  user_service.rs
backend/src/util/: api_doc.rs  ca_certificate.rs  mod.rs  types.rs
backend/src/util/traits/: from_model.rs  map_error_to_io_error.rs  mod.rs  register_module.rs
backend/tests/: web-tests.rs
backend/tests/controller/: admin_controller_test.rs  certificate_controller_test.rs  client_controller_test.rs  common_test.rs  helpers.rs  mod.rs  signing_request_controller_test.rs
ca-client/: .env  Cargo.toml
ca-client/certs/: cert.pem  private.pem  public.pem
ca-client/src/: api.rs  certificate.rs  certificate_renewer.rs  config.rs  log.rs  main.rs  timed_call.rs
ca-frontend/: .gitignore  .prettierignore  Dockerfile  orval.config.cjs  package-lock.json  package.json  svelte.config.js  tsconfig.json
ca-frontend/src/: app.html
ca-frontend/static/: silent-check-sso.html
client/: .env
client/src/: api.rs  certificate.rs  certificate_renewer.rs  config.rs  main.rs
docker/: Dockerfile.backend  Dockerfile.client  create-databases.sh  docker-compose.yml
frontend/: .dockerignore  .env  .prettierignore  Dockerfile  orval.config.cjs  package-lock.json  package.json  svelte.config.js
frontend/src/: app.html
shared/: Cargo.toml
src/: main.rs  mk_certs.rs
src/config/: app_state.rs  config.rs
src/controller/: certificate.rs  certificates.rs  client_controller.rs  common.rs  mod.rs  signing_request_controller.rs  swagger.rs  user.rs
src/entities/: client.rs  mod.rs  user.rs
(+211 files in other folders)
