[package]
name = "ca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
openssl = { version = "0.10", features = ["vendored"] }
log = "0.4"
log4rs = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
#paperclip = { version = "0.8", features = ["actix4"] }
derive_more = "0.99.17"
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
utoipa = { version = "3", features = ["actix_extras"] }
lazy_static = "1.4.0"
serde_json = "1.0.94"
actix-web-middleware-keycloak-auth = "0.4.0"
sea-orm = { version = "0.11.0", features = [
    "macros",
    "sqlx-postgres",
    "runtime-actix-rustls",
    "debug-print",
    "postgres-array",
    "with-chrono",
    "uuid"
] }
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
dotenv = "0.15.0"
futures-util = "0.3.26"
envconfig = "0.10.0"
keycloak = "21.0"
reqwest = "0.11.14"
futures = "0.3.27"
