[package]
name = "ca-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
openssl = { version = "0.10.47", features = ["vendored"] }
log = "0.4"
log4rs = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99.17"
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
utoipa = { version = "3", features = ["actix_extras"] }
lazy_static = "1.4.0"
serde_json = "1.0.94"
actix-web-middleware-keycloak-auth = "0.4.0"
sea-orm = { version = "0.11.0", features = [
    "macros",
    "sqlx-postgres",
    "runtime-actix-rustls",
    "debug-print",
    "postgres-array",
    "with-chrono",
    "uuid",
    "mock"
] }
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
dotenv = "0.15.0"
futures-util = "0.3.26"
envconfig = "0.10.0"
keycloak = "21.0.101"
reqwest = "0.11.14"
futures = "0.3.27"
shared = { path = "../shared" }
async-trait = "0.1.66"
mockall = "0.11.4"

[dev-dependencies]
jsonwebtoken = "8.3.0"